# ValsSnakeAI

./: AI.cpp  AI.h  Build_Debug.bat  Build_Release.bat  CMakeLists.txt  Game.cpp  Game.h  README.md  StringDefs.cpp  StringDefs.h  ValsSnakeAI.cpp  ValsSnakeAI.sln  ValsSnakeAI.vcxproj  ValsSnakeAI.vcxproj.filters
include/: AI.h  Game.h  StringDefs.h  VirtualKeycodes.h  virtual_keycodes.h
source/: CMakeLists.txt  ai.cpp  game.cpp  main.cpp  stringdefs.cpp
